[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools']

[project]
name = 'apscheduler-webui'
version = '0.0.1'
requires-python = '>=3.10'
dependencies = [
    'apscheduler',
    'fastapi',
    'fastui',
    'loguru',
    "pydantic<2.10",
    'python-multipart',
    'uvicorn',
]

[[project.authors]]
name = 'Dragon-GCS'
email = '878173121@qq.com'

[project.optional-dependencies]
mongo = [ 'pymongo' ]
redis = [ 'redis' ]
sql = [ 'sqlalchemy' ]
all = [
    'pymongo',
    'redis',
    'sqlalchemy',
]
[tool.setuptools]
packages = ['src']
